[package]
name = "credit_card"
version = "0.1.0"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/credit_card"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo/"
description = "A fundamental credit card library"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.3.9"
lazy_static = "1.4.0"
