[package]
name = "credit_card"
version = "0.1.4"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/credit_card"
readme = "README.md"
repository = "https://github.com/chmoder/credit_card/"
description = "A fundamental credit card library"
license = "MIT"

[dependencies]
serde = { version = "^1", features = ["derive"] }
regex = "^1"
lazy_static = "^1"

[dev-dependencies]
criterion = "^0.3"
tokio = { version = "^1", features = ["full"] }

[lib]
bench = false

[[bench]]
name = "credit_card_benchmark"
harness = false